# sig-tool

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  sig-tool.cabal  stack-7.8.yaml  stack.yaml
main/: Main.hs
main/Sig/CLI/: Check.hs  Init.hs  Install.hs  List.hs  Sign.hs  Trust.hs  Types.hs  Update.hs
src/: Sig.hs
src/Sig/: Archive.hs  Cabal.hs  Check.hs  Config.hs  Defaults.hs  Doc.hs  GPG.hs  Hackage.hs  Init.hs  Install.hs  List.hs  Mapping.hs  Sign.hs  Tool.hs  Trust.hs  Types.hs  Update.hs
src/Sig/Cabal/: Parse.hs
src/Sig/Tool/: Cabal.hs  Hackage.hs  Types.hs
src/System/Directory/: Parse.hs
