name:                sig-tool
version:             0.0.0
synopsis:            Library and program for dealing with package signing
description:         The library can parse the sig-archive
                     <https://github.com/commercialhaskell/sig-archive> and can
                     communicate with sig-service
                     <https://github.com/commercialhaskell/sig-service/>. Also,
                     sig-service uses this library for parsing the signature archive.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@fpcomplete.com
copyright:           2015 FP Complete
category:            Development, Cryptography
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Sig
  build-depends:     Cabal >= 1.18
                   , aeson >= 0.8
                   , base >= 4 && <5
                   , bytestring >= 0.10
                   , containers >= 0.5
                   , email-validate >= 2.0
                   , text >= 1.2
                   , yaml >= 0.8

executable sig
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
