name:                sig-tool
version:             0.0.0
synopsis:            Library and program for dealing with package signing
description:         The library can parse the sig-archive
                     <https://github.com/commercialhaskell/sig-archive> and can
                     communicate with sig-service
                     <https://github.com/commercialhaskell/sig-service/>. Also,
                     sig-service uses this library for parsing the signature archive.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@fpcomplete.com
copyright:           2015 FP Complete
category:            Development, Cryptography
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/commercialhaskell/sig-tool

library
  hs-source-dirs:    src/
  exposed-modules:   Sig
                     Sig.Archive
                     Sig.Cabal
                     Sig.Cabal.Parse
                     Sig.Check
                     Sig.Config
                     Sig.Defaults
                     Sig.Doc
                     Sig.GPG
                     Sig.Hackage
                     Sig.Init
                     Sig.Install
                     Sig.List
                     Sig.Mapping
                     Sig.Sign
                     Sig.Trust
                     Sig.Types
                     Sig.Update
  other-modules:     System.Directory.Parse
  build-depends:     Cabal          >=1.18
                   , aeson          >=0.8
                   , ansi-wl-pprint
                   , base           >=4 && <5
                   , base-prelude
                   , bytestring     >=0.10
                   , conduit
                   , conduit-extra
                   , conduit-combinators
                   , containers     >=0.5
                   , directory      >=1.2
                   , email-validate >=2.0
                   , exceptions
                   , filepath       >=1.3
                   , http-conduit
                   , http-types
                   , monad-control
                   , old-locale
                   , process        >=1.2
                   , split
                   , tar
                   , text           >=1.2
                   , time
                   , transformers
                   , uuid
                   , yaml           >=0.8

executable sig
  hs-source-dirs:    main/
  main-is:           Main.hs
  build-depends:     base           >=4 && <5
                   , base-prelude
                   , cabal-file-th
                   , optparse-applicative
                   , sig-tool
                   , template-haskell
                   , time
