name:                sig-tool
version:             0.0.0
synopsis:            Library and program for dealing with package signing
description:         The library can parse the sig-archive
                     <https://github.com/commercialhaskell/sig-archive> and can
                     communicate with sig-service
                     <https://github.com/commercialhaskell/sig-service/>. Also,
                     sig-service uses this library for parsing the signature archive.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@fpcomplete.com
copyright:           2015 FP Complete
category:            Development, Cryptography
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/commercialhaskell/sig-tool

library
  hs-source-dirs:    src/
  exposed-modules:   Sig.Sign
  other-modules:     Sig.Cabal
                     Sig.Cabal.Parse
                     Sig.Hackage
                     Sig.Types
  build-depends:     Cabal
                   , aeson
                   , base
                   , bytestring
                   , conduit
                   , conduit-combinators
                   , containers
                   , directory
                   , exceptions
                   , filepath
                   , http-conduit
                   , http-types
                   , monad-control
                   , monad-logger
                   , path
                   , process
                   , split
                   , stack
                   , tar
                   , text
                   , transformers
                   , yaml

executable sig
  hs-source-dirs:    main/
  main-is:           Main.hs
  build-depends:     base
                   , base-prelude
                   , cabal-file-th
                   , monad-logger
                   , optparse-applicative
                   , sig-tool
                   , template-haskell
                   , time
